# New_Interface_M5Paper

./: BUILD_STATUS.md  CMakeLists.txt  PROJECT_KNOWLEDGE.md  README.md  build.bat  build_all.bat  build_and_setup.py  build_direct.bat  build_emulator.ps1  build_emulator.py  build_msvc.py  build_msvc_direct.py  gcc.bat  make.bat  platformio.ini  run_emulator.ps1  test_compile.bat  test_sdl2.c  test_simple.bat
include/: lv_conf.h
lib/: lv_drv_conf.h
src/: SConscript  main.cpp  sdl_main_stub.c  winmain.c
src/app/epub_reader/: epub_reader_app.cpp  epub_reader_app.h  epub_reader_core.cpp  epub_reader_core.h  epub_reader_main.cpp  epub_reader_main.h
src/app/epub_reader/images/: epub_reader_64px.c
src/app/image_viewer/: image_viewer_app.cpp  image_viewer_app.h  image_viewer_main.cpp  image_viewer_main.h
src/app/image_viewer/images/: image_viewer_64px.c
src/app/sketchpad/: sketchpad_app.cpp  sketchpad_app.h  sketchpad_main.cpp  sketchpad_main.h
src/app/sketchpad/images/: sketchpad_64px.c
src/display/: monitor.cpp  monitor.h
src/gui/: keyboard.cpp
src/gui/mainbar/app_tile/: app_tile.h
src/gui/mainbar/note_tile/: note_tile.cpp
src/gui/mainbar/setup_tile/: setup_tile.cpp
src/hardware/: timesync.cpp
src/indev/: mouse.cpp  mouse.h
src/utility/: M5GFX_stub.cpp  M5GFX_stub.hpp  lvgl_port_m5stack.cpp  lvgl_port_m5stack.hpp  sdl_entry.cpp  sdl_main.cpp  sdl_stubs.c  winmain_stub.c
support/: build_fixes.py  build_with_msvc.py  msvc_environment.py  sdl2_build_extra.py  sdl2_mingw_post.py
